@@ -115,7 +115,7 @@ void Crawler::TimeTick(Double_t t, Double_t dt)
     update_grav_safeties(vl, vt);
 
     // Testing printout.
-    if (bSelected)
+    if (bSelected && G_DEBUG > 0)
     {
       mGrav.Print();
       printf("  v_mag=%f, vl=%f, vt=%f, t_safe=%f, d_safe=%f (d/v)=%f\n",
